--- a/spring-source-analysis-parent/spring-source-analysis-security-oauth2/src/main/webapp/WEB-INF/web.xml
+++ b/spring-source-analysis-parent/spring-source-analysis-security-oauth2/src/main/webapp/WEB-INF/web.xml
@@ -1,44 +1,20 @@
 <!DOCTYPE web-app >
 
 <web-app>
-    <display-name>spring mvc source analysis</display-name>
-
-	<filter>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+    <display-name>spring source analysis security</display-name>
 
 	<!-- 使用ContextLoaderListener配置时,需要告诉它Spring配置文件的位置 -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:applicationContext.xml</param-value>
+        <param-value>classpath:spring-security.xml;classpath:applicationContext.xml</param-value>
     </context-param>
-    
-    <!-- log4j日志文件配置 -->
-<!--     <context-param> -->
-<!--         <param-name>log4jConfigLocation</param-name> -->
-<!--         <param-value>classpath:log/log4j.xml</param-value> -->
-<!--     </context-param> -->
-
-<!--     <context-param> -->
-<!--         <param-name>log4jRefreshInterval</param-name> -->
-<!--         <param-value>60000</param-value> -->
-<!--     </context-param> -->
-
-<!-- 		<listener> -->
-<!--         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class> -->
-<!--     </listener> -->
 
 	<!-- 
 	    SpringMVC的前端控制器,当DispatcherServlet载入后,它将从一个XML文件中
 	    载入Spring的应用上下文,该XML文件的名字取决于这里DispathcerServlet将试图从一个
 	   叫做Springmvc-servlet.xml的文件中载入应用上下文,其默认位于WEB-INF目录下
 	 -->
-	  <servlet>
+	 <servlet>
         <servlet-name>springmvc</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
@@ -50,7 +26,9 @@
 
     <servlet-mapping>
         <servlet-name>springmvc</servlet-name>
-        <url-pattern>*.html</url-pattern>
+<!--         <url-pattern>/*</url-pattern> -->
+        <url-pattern>/</url-pattern>
+<!--         <url-pattern>*.html</url-pattern> -->
     </servlet-mapping>
    
 	<!-- 
@@ -61,4 +39,13 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    
+    <filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
